<resources>
    <string name="app_name">سىرداش</string>
    <string name="homepage">تەۋسىيە</string>
    <string name="empty"></string>
    <string name="yujian">ئۇچرىشىش</string>
    <string name="guangchang">مەيدان</string>
    <string name="minepage">مېنىڭ</string>
    <string name="xiaoxi">ئۇچۇر</string>
    <string name="update">يوللاش</string>
    <string name="sendgift">سوۋغات</string>
    <string name="cancel">بېكارلاش</string>
    <string name="save">ساقلاش</string>
    <string name="confirm">جەزملەش</string>
    <string name="delete">ئۆچۈرۈش</string>
    <string name="settings">تەڭشەش</string>
    <string name="version">نەشىر ئۇچۇرى</string>
    <string name="current_version">نۆۋەتتىكى نەشىر</string>
    <string name="about_me">مەن ھەققىدە</string>
    <string name="mingxi">تەپسىلاتى</string>
    <string name="sqtk">پۇل قايتۇرۇشقا ئىلتىماس</string>
    <string name="press_again_to_leave">يەنە بىر جەزملەپ چېكىنىش</string>
    <string name="loading">يۈكلىنىۋاتىدۇ...</string>
    <string name="load_err_retry">يۈكلىنىش مەغلۇپ بولدى ، يەنە بىر سىناڭ</string>
    <string name="empty_fornow">ۋاقتىنچە مەزمۇن يوق</string>
    <string name="net_error">تور نۇرمالسز ، تور تەڭشىكىنى تەكشۈرۈڭ</string>
    <string name="locating">ئورۇن بەلگىلىنىۋاتىدۇ ...</string>
    <string name="located_failed">ئورۇن بەلگىلەش مەغلۇپ بولدى</string>
    <string name="prompt_phone">يانفون نومۇرى</string>
    <string name="prompt_captcha">تەستىق كودى</string>
    <string name="send_captcha">/تەستىق كودى</string>
    <string name="captcha_sending">تەستىق كودى يوللىنىۋاتىدۇ</string>
    <string name="login">تىزىملاش</string>
    <string name="hint">ئەسكەرتىش</string>
    <string name="committing">سانلىق مەلۇمات تاپشۇرىلىۋاتىدۇ</string>
    <string name="phonenum">يانفون نومۇرىڭىزنى كىرگۈزۈڭ</string>
    <string name="captcha">تەستىق كودىنى كىرگۈزۈڭ</string>
    <string name="fetch_captcha">تەستىق كودىغا ئېرىشىڭ</string>
    <string name="captcha_sended">تەستىق كودى ئەۋەتىلدى</string>
    <string name="please_wait">سىكونت %1$d ساقلاش ۋاقتى</string>
    <string name="login_ing">تىزىملىنىۋاتىدۇ</string>
    <string name="edit_compose">ماتېريال تەھرىرلەش</string>
    <string name="portrait">باش سۆرەت</string>
    <string name="clip_picture">سۆرەتنى كېسىش</string>
    <string name="username">ئىسىم فامىلە</string>
    <string name="gender">جىنسى</string>
    <string name="male">ئەر</string>
    <string name="female">ئايال</string>
    <string name="birth_date">توغۇلغان كۈن</string>
    <string name="height">بوي ئېگىزلىكى</string>
    <string name="input_phone_changed">يانفون نومۇرىنى ئۆزگەرتتىڭىز ، تەستىق كودىنى قايتىدىن كىرگۈزۈڭ</string>
    <string name="phonenum_cant_empty">يانفون نومۇرىنى قۇرۇق قالدۇرۇشقا بولمايدۇ </string>
    <string name="phonenum_invalid">توغرا بولغان يانفون نومۇرىنى كىرگۈزۈڭ</string>
    <string name="captcha_cant_empty">توغرا بولغان تەستىق كودىنى كىرگۈزۈڭ</string>
    <string name="register_protocol">تىزىملىتىش قوشۇلغانلىقنى ئىسپاتلايدۇ[Emi]</string>
    <string name="privacy_items">مەخپىيەتلىك كېلىشىمنامىسى</string>
    <string name="setting_opinion">پىكىر-تەلەپلەر</string>
    <string name="setting_service">سېتىشتىن كېيىنكى مۇلازىمەت</string>
    <string name="setting_about">توغرىسىدا</string>
    <string name="setting_private">ئابونتلار مەخپىيەتلىك كېلىشىمنامىسى</string>
    <string name="setting_logout">تىزىملىتىشتىن چېكىنىش</string>
    <string name="personal_info">ماتېرياللىرىم</string>
    <string name="feedback">پىكىر-تەلەپلەر</string>
    <string name="feedback_hint">بىزگە بولغان پىكىر ۋە تەلەپلەرنى كىرگۈزۈڭ</string>
    <string name="feedback_success">يوللاش مۇۋەپپىقىيەتلىك!</string>
    <string name="send">يوللاش</string>
    <string name="pick_place">ئورۇننى تاللاڭ</string>
    <string name="edit">تەھرېرلەش</string>
    <string name="done">تامام</string>
    <string name="dazhaohu">سالام يوللاش</string>
    <string name="shop_title">سېتىۋېلىش ھارۋىسى(%s)</string>
    <string name="count_goods">ھېسابات ئۈزۈش（%s）</string>
    <string name="point_reduce">باش تېما 50 ھەرپتىن ئاشماسلىقى كېرەك ، جۇغلانما نومۇر تارتىلىدۇ：%sنومۇر</string>
    <string name="point_add">جۇغلانما نومۇر تەستىقتىن ئۆتكەندىن كېيىن قوشۇلىدۇ：%s，باش تېما 50 ھەرپتىن ئاشماسلىقى كېرەك</string>
    <string name="pic_hint">پېكسىل چوڭلۇقتا تەڭشەڭ一600*600一سۆرەتنىڭ كۆرگەزمە ئۈنۈمىگە كاپالەتلىك قىلىش ئۈچۈن</string>
    <string name="clear">تازىلاش</string>
    <string name="new_address">ئادرىس قوشۇش</string>
    <string name="hint1"> بىرىنچى ، ئاخىرلىشىش ۋاقتى بولسا ئېتىبار بېلىتى ئېلىشنىڭ ئەڭ ئاخىرقى چېكىنى كۆرسىتىدۇ</string>
    <string name="hint2">ئىككىنچى ، ئىناۋەتلىك ئىشلىتىش ۋاقتى بولسا ئېتىبار بېلىتى ئېلىنغاندىن باشلاپ ئاخىرلاشقىچە بولغان چىسلانى كۆرسىتىدۇ</string>
    <string name="recommit">قايتىدىن ئىلتىماس</string>
    <string name="shopname">ۋېكتورىيەنىڭ مەخپىيتى</string>
    <string name="goodname">ئالما iPhone X 256G</string>
    <string name="shopintro">ئەڭ ئىشەنچلىك ئاۋات دۇكان</string>
    <string name="distance">400m</string>
    <string name="address">ئۈرۈمچى شەھەرلىك تىيەنشەن رايونى كونسۇل كوچۇسى</string>
    <string name="goodsname">ۋېكتورىيەنىڭ مەخپىيىتى 18 - بۆلۈم قول كەشتىسى</string>
    <string name="rmb">¥</string>
    <string name="money">¥0.00</string>
    <string name="sale">دانە سېتىلدى1000</string>
    <string name="comment">ئىنكاس：10</string>
    <string name="rate">ماختىلىشى：90%</string>
    <string name="ljlq">ئېرىشىش\nدەرھال</string>
    <string name="ljsy">ئىشلىتىش\nدەرھال</string>
    <string name="manager">باشقۇرۇش</string>
    <string name="httperror">تور ئىلتىماسى مەغلۇب بولدى ...</string>
    <string name="nomore">تېخىمۇ كۆپ ئۇچۇر يوق</string>
    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>
    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
    <string name="share_title">سىرداش</string>
    <string name="share_des">مۇھەببەتلىك تۇرمۇشىڭىزنى باشلاڭ</string>
    <string name="select_huati">تېما تاللاش</string>
    <string name="tiaojian_shai">شەرتلىك تاللاش</string>
    <string name="wo_all_huati">پۈتۈن تېما</string>
    <string name="wo_fujin">يېقىن ئەتراپ </string>
    <string name="wo_age">يېشى</string>
    <string name="wo_adress">ئۇلتۇرۇشلۇق ئۇرنى</string>
    <string name="wo_xinyong">ئىناۋەت</string>
    <string name="wo_xinyongfen">ئىناۋەت نۇمۇرى</string>
    <string name="wo_buxian">چەكلىمە يۇق </string>
    <string name="wo_qingkong">تازلاش </string>
    <string name="wo_guanzhu">نەزەر سېلىش</string>
    <string name="wo_zhengyou">دوست تۇتۇش شەرتى</string>
    <string name="wo_qingxuan">تاللاڭ</string>
    <string name="wo_yueshou">ئايلىق كىرىمى</string>
    <string name="wo_xueli">ئۇقۇش تارىخى</string>
    <string name="wo_fangchan">ئۆي-مۈلۈك </string>
    <string name="wo_qiche">ماشىنا</string>
    <string name="wo_minzu">مىللىتى</string>
    <string name="wo_jiguan">يۇرتى</string>
    <string name="wo_youfang">ئۆيى بارمۇ يۇق</string>
    <string name="wo_gouche">ماشىنا سېتىۋالامسىز</string>
    <string name="wo_shiming">ھەققى ئىسمنى تاللامسىز</string>
    <string name="wo_select_jubao_type">پاش قىلىش تۈرىنى تاللاش</string>
    <string name="wo_no_huati">تاللاشقا بۇلىدىغان تېما يۇق</string>
    <string name="wo_xitongxiaoxi">سىستما ئۇچۇرى</string>
    <string name="wo_xiaoxishezhi">ئۇچۇر تەڭشىكى</string>
    <string name="wo_jieshouwoxiaoxi">ئۇچۇر قۇبۇل قىلىش</string>
    <string name="wo_jieshouxiaoxi"> ھەممە ئۇچۇرنى قۇبۇل قىلىش</string>
    <string name="wo_zhijieshouxiaoxi"> شەرتكە ئۇيغۇن ئۇچۇرنى قۇبۇل قىلىش</string>
    <string name="wo_zhengyouzhong"> دۇست ئىزدەۋاتىدۇ</string>
    <string name="wo_zhengzaiyuehui"> لايىق ئىزدەش</string>
    <string name="wo_zhaodaoyizhong"> كۈڭۈل ھەمرايىنى تېپىش</string>
    <string name="wo_lianaizhuangtai"> مۇھەببەتلىشىش ھالىتى .</string>
    <string name="wo_renzhengzhuangtai">دەلىللەش ھالىتى :</string>
    <string name="wo_shenhezhong">دەلىللىنىۋاتىدۇ .</string>
    <string name="wo_yirenzheng">ئېتىراپ قىلىندى</string>
    <string name="wo_shenhefil">دەلىللەش مەغلۇب بۇلدى</string>
    <string name="wo_qurenzhegn"> سالاھىتىنى تۇنۇتۇش</string>
    <string name="wo_huiyuanfuwu">ئەزالار مۇلازىمىتى</string>
    <string name="wo_guanzhude">مېنىڭ  كۆرگەنلىرىم</string>
    <string name="wo_qianbao">پۇل قاپچۇقۇم</string>
    <string name="wo_gerenziliao">شەخسىي ماتىرىيال</string>
    <string name="wo_xiangce">مېنىڭ ئالبومىم</string>
    <string name="wo_renzhengzhongxin">دەلىلەش مەركىزى</string>
    <string name="wo_dongtai"> مېنىڭ ھالىتىم</string>
    <string name="wo_shuiguan">مەستانىلىرىم </string>
    <string name="wo_shuikan"> مىنى كۆرگەنلەر </string>
    <string name="wo_yaoqing"> دۇست تەكلىپ قىلىش</string>
    <string name="wo_gerenxinxi"> شەخسىي ئۇچۇرلار </string>
    <string name="wo_nichengbuweikong">تەخەللۇسنى قۇرۇق قالدۇرۇشقا بۇلمايدۇ </string>
    <string name="wo_qingtiannicheng"> تەخەللۇسنى يېزىش</string>
    <string name="wo_weitiannicheng"> تەخەللۇسى يېزىلمىغان</string>
    <string name="wo_neixindubai"> قەلب ئىزھارى</string>
    <string name="wo_tianxiedubai"> كۆڭۈل ئىزھارىنى يېزىش </string>
    <string name="wo_jibenziliao">ئاساسىي ماتىرياللار</string>
    <string name="wo_xiangxiziliao">تەپسىلىي ماتىرىياللار</string>
    <string name="wo_biaoqianxuan"> بەتكۈچنى تاللاش </string>
    <string name="wo_shuomingbiaoqian">ئىزاھات: بەتكۈچتە ئەڭ كۆپ بولغاندا ئۈچنىلا تاللىغىلى بولىدۇ </string>
    <string name="wo_biyeyuanxiao">پۈتتۈرگەن مەكتىپى  </string>
    <string name="wo_qingshuru"> كىرگۈزۈڭ</string>
    <string name="wo_qingxuanze">تاللاڭ </string>
    <string name="wo_hangye"> كەسىپ</string>
    <string name="wo_hunyinzhuang">نىكاھ ئەھۋالى</string>
    <string name="wo_zaixunzhao">ئىزدەۋاتىمەن</string>
    <string name="wo_tizhong">بەدەن ئېغىرلىقىڭىز</string>
    <string name="wo_youwuzinv">پەرزەنت  بارمۇ يوق</string>
    <string name="wo_zongjiao">ئېتىقادىڭىز</string>
    <string name="wo_xingzuo">يۇلتۇز تۈركۈمىڭىز</string>
    <string name="wo_shuxiang">مۆچىلىڭىز</string>
    <string name="wo_fabudongtai">ھەرىكەت ھالىتىنى ئېلان قىلىش</string>
    <string name="wo_huatixuanze">تېما تاللاش.：</string>
    <string name="wo_xianshiweizhi"> ئورۇن بەلگىلەپ بېرەمدۇ</string>
    <string name="wo_yishiming">ئىسىم جەزملەشتۈرۈلدى</string>
    <string name="wo_wufang">ئۆيى يۇق</string>
    <string name="wo_youche"> ماشىنىسى بار</string>
    <string name="wo_wuche">ماشىنىسى يۇق</string>
    <string name="wo_tongzhishezhi"> ئۇقتۇرۇش تەڭشىكى</string>
    <string name="wo_heimingdan">قارا  تىزىملىك </string>
    <string name="wo_xiugaimima"> مەخپىي نومۇرنى ئۆزگەرتىش</string>
    <string name="wo_yijianfank"> پىكىر ئىنكاس قىلىش </string>
    <string name="wo_fuwuxieyi"> مۇلازىمەت كېلىشىمى</string>
    <string name="wo_lianxiwomen"> بىز بىلەن ئالاقىلىشىڭ</string>
    <string name="wo_changjian">دائىم كۆرۈلىدىغان مەسىلىلەر</string>
    <string name="wo_banbengengx">نەشرىنى يېڭىلاش  </string>
    <string name="wo_qingchuhuan"> غەملەكنى تازىلاش</string>
    <string name="wo_shoujirz">يانفون دەلىللەش </string>
    <string name="wo_shenfenrz">  سالاھىيەت ئىسپاتى</string>
    <string name="wo_xuelrz"> ئوقۇش تارىخى ئىسپاتى</string>
    <string name="wo_zhiyerz">كەسپىي ئىسپات بېرىش  </string>
    <string name="wo_cherz">ئاپتوموبىل ئىسپاتى  </string>
    <string name="wo_fangrz"> ئۆي مۈلۈك ئىسپاتى </string>
    <string name="wo_qurz">دەلىللەڭ </string>
    <string name="wo_disanfanglogin"> ئۈچىنچى تەرەپ تىزىملىتىش ياكى رويخەتكە ئالدۇرۇش </string>
    <string name="wo_wangjimima"> مەخپىي نومۇرنى ئۇنتۇش </string>
    <string name="wo_zhuceyonghu"> رويخەتكە ئېلىنغان ئابۇنىت </string>
    <string name="wo_qingshurumima"> مەخپىي نومۇرىڭىزنى كىرگۈزۈڭ</string>
    <string name="wo_tijiao">تاپشۇرۇش </string>
</resources>