<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/space"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_tzsz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_tongzhishezhi"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_hmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_heimingdan"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_xgmm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_xiugaimima"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_yjfk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_yijianfank"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_fwxy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_fuwuxieyi"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_lxwm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_lianxiwomen"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_cjwt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:drawableRight="@mipmap/ic_more"
                android:paddingBottom="15dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:text="@string/wo_changjian"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_bbgx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="1dp"
                    android:drawableRight="@mipmap/ic_more"
                    android:paddingBottom="15dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="15dp"
                    android:text="@string/wo_banbengengx"
                    android:textColor="@color/txt_lv6"
                    android:textSize="14sp" />
                <View
                    android:id="@+id/updateView"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="30dp"
                    android:visibility="gone"
                    android:background="@drawable/bg_red_round"/>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_qchc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="15dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="15dp"
                android:drawableRight="@mipmap/ic_more"
                android:text="@string/wo_qingchuhuan"
                android:textColor="@color/txt_lv6"
                android:textSize="14sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line" />
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:background="@color/white"
                android:text="@string/setting_logout"
                android:textColor="@color/txt_lv4" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>