<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_lv7"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/wo_shoujirz"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phonenum"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txt_lv4"
            android:textColorHint="@color/txt_lv1"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/captcha"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txt_lv4"
            android:textColorHint="@color/txt_lv1"
            android:textSize="14sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:background="@color/txt_main"/>

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/txt_size_14"
            android:textColor="@color/txt_main"
            android:text="@string/fetch_captcha" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/line" />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shap_round_main_5dp"
        android:clickable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/wo_tijiao"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>