<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wo_qingkong"
        android:layout_gravity="right"
        android:textColor="@color/txt_lv2"
        android:padding="10dp"/>
    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_lv7"
            android:padding="10dp"
            android:text="@string/gender"/>
        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:drawableRight="@mipmap/ic_more"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/ll_nl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_lv7"
            android:padding="10dp"
            android:text="@string/wo_age"/>
        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:drawableRight="@mipmap/ic_more"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/ll_jzz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_lv7"
            android:padding="10dp"
            android:text="@string/wo_adress"/>
        <TextView
            android:id="@+id/tv_jzz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@mipmap/ic_more"
            android:drawablePadding="5dp"
            android:gravity="right"
            android:padding="10dp"
            android:text=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"/>
    <LinearLayout
        android:id="@+id/ll_xy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_lv7"
            android:padding="10dp"
            android:text="@string/wo_xinyong"/>
        <TextView
            android:id="@+id/tv_xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="10dp"
            android:drawableRight="@mipmap/ic_more"
            android:drawablePadding="5dp"
            android:text=""/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/txt_main"/>

</LinearLayout>